feat(class): 更新班级成员管理功能，添加班级加入请求参数类，修改相关服务逻辑以支持加入码验证