@@ -1,103 +1,112 @@
 package com.example.goodlearnai.v1.service.impl;
 
-import com.example.goodlearnai.v1.entity.ClassMembers;
+import com.example.goodlearnai.v1.common.Result;
+import com.example.goodlearnai.v1.dto.ClassJoinRequest;
 import com.example.goodlearnai.v1.entity.Class;
+import com.example.goodlearnai.v1.entity.ClassMembers;
 import com.example.goodlearnai.v1.entity.Users;
-import com.example.goodlearnai.v1.mapper.ClassMembersMapper;
 import com.example.goodlearnai.v1.mapper.ClassMapper;
+import com.example.goodlearnai.v1.mapper.ClassMembersMapper;
 import com.example.goodlearnai.v1.mapper.UserMapper;
 import com.example.goodlearnai.v1.service.IClassMembersService;
-import com.example.goodlearnai.v1.common.Result;
 import com.example.goodlearnai.v1.utils.AuthUtil;
 import com.example.goodlearnai.v1.vo.ClassMemberVO;
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
-import org.springframework.beans.BeanUtils;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import lombok.extern.slf4j.Slf4j;
+
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 /**
- * <p>
- * 班级成员表 服务实现类
- * </p>
- *
- * @author author
- * @since 2025-09-17
+ * 班级成员服务实现
  */
 @Service
 @Slf4j
-public class ClassMembersServiceImpl extends ServiceImpl<ClassMembersMapper, ClassMembers> implements IClassMembersService {
+public class ClassMembersServiceImpl extends ServiceImpl<ClassMembersMapper, ClassMembers>
+        implements IClassMembersService {
 
     @Autowired
     private ClassMapper classMapper;
-    
+
     @Autowired
     private UserMapper userMapper;
 
     @Override
-    public Result<String> intoClass(ClassMembers classMembers) {
+    public Result<String> intoClass(ClassJoinRequest request) {
         Long userId = AuthUtil.getCurrentUserId();
         String role = AuthUtil.getCurrentRole();
 
-        // 判断是否为学生角色
         if (!"student".equals(role)) {
             log.warn("用户暂无权限加入班级: userId={}", userId);
             return Result.error("暂无权限加入班级");
         }
 
-        // 验证班级是否存在
-        Class classEntity = classMapper.selectById(classMembers.getClassId());
-        if (classEntity == null) {
-            log.warn("班级不存在: classId={}", classMembers.getClassId());
-            return Result.error("班级不存在");
-        }
-
-        // 验证加入码
-        if (classMembers.getJoinCode() == null || classMembers.getJoinCode().trim().isEmpty()) {
-            log.warn("加入码不能为空: userId={}, classId={}", userId, classMembers.getClassId());
+        String joinCode = request.getJoinCode() == null ? null : request.getJoinCode().trim().toUpperCase();
+        if (joinCode == null || joinCode.isEmpty()) {
+            log.warn("加入码不能为空: userId={}", userId);
             return Result.error("请输入班级加入码");
         }
-        
-        if (!classMembers.getJoinCode().equals(classEntity.getJoinCode())) {
-            log.warn("加入码错误: userId={}, classId={}, inputCode={}", userId, classMembers.getClassId(), classMembers.getJoinCode());
+
+        Class classEntity = null;
+        if (request.getClassId() != null) {
+            classEntity = classMapper.selectById(request.getClassId());
+        }
+        if (classEntity == null) {
+            QueryWrapper<Class> wrapper = new QueryWrapper<>();
+            wrapper.eq("join_code", joinCode);
+            classEntity = classMapper.selectOne(wrapper);
+        }
+
+        if (classEntity == null) {
+            log.warn("根据加入码未找到班级: joinCode={}", joinCode);
             return Result.error("班级加入码错误");
         }
 
-        // 检查学生是否已经在班级中
+        if (!Boolean.TRUE.equals(classEntity.getStatus())) {
+            log.warn("班级已停用: classId={}", classEntity.getClassId());
+            return Result.error("该班级已停用，请联系教师");
+        }
+
+        if (classEntity.getJoinCode() == null
+                || !joinCode.equalsIgnoreCase(classEntity.getJoinCode().trim())) {
+            log.warn("加入码不匹配: userId={}, classId={}, inputCode={}",
+                    userId, classEntity.getClassId(), joinCode);
+            return Result.error("班级加入码错误");
+        }
+
         QueryWrapper<ClassMembers> queryWrapper = new QueryWrapper<>();
-        queryWrapper.eq("class_id", classMembers.getClassId())
-                   .eq("user_id", userId)
-                   .eq("status", true);
-        
+        queryWrapper.eq("class_id", classEntity.getClassId())
+                .eq("user_id", userId)
+                .eq("status", true);
+
         ClassMembers existingMember = getOne(queryWrapper);
         if (existingMember != null) {
-            log.info("学生已在班级中: userId={}, classId={}", userId, classMembers.getClassId());
+            log.info("学生已在班级中: userId={}, classId={}", userId, classEntity.getClassId());
             return Result.error("您已经在该班级中");
         }
 
         try {
-            // 设置加入时间和用户ID
-            classMembers.setJoinTime(LocalDateTime.now());
-            classMembers.setUserId(userId);
-            // 设置默认状态为正常
-            if (classMembers.getStatus() == null) {
-                classMembers.setStatus(true);
+            ClassMembers classMember = new ClassMembers();
+            classMember.setClassId(classEntity.getClassId());
+            classMember.setUserId(userId);
+            classMember.setJoinTime(LocalDateTime.now());
+            classMember.setStatus(true);
+
+            if (save(classMember)) {
+                log.info("学生加入班级成功: userId={}, classId={}", userId, classEntity.getClassId());
+                return Result.success("加入班级成功");
             }
 
-            // 保存班级成员信息
-            if (save(classMembers)) {
-                log.info("学生加入班级成功: userId={}, classId={}", userId, classMembers.getClassId());
-                return Result.success("加入班级成功");
-            } else {
-                log.error("学生加入班级失败: userId={}, classId={}", userId, classMembers.getClassId());
-                return Result.error("加入班级失败");
-            }
+            log.error("学生加入班级失败: userId={}, classId={}", userId, classEntity.getClassId());
+            return Result.error("加入班级失败");
         } catch (Exception e) {
-            log.error("学生加入班级失败: userId={}, classId={}, error={}", userId, classMembers.getClassId(), e.getMessage());
+            log.error("学生加入班级失败: userId={}, classId={}, error={}",
+                    userId, classEntity.getClassId(), e.getMessage());
             return Result.error("加入班级失败: " + e.getMessage());
         }
     }
@@ -107,25 +116,22 @@ public class ClassMembersServiceImpl extends ServiceImpl<ClassMembersMapper, Cla
         Long userId = AuthUtil.getCurrentUserId();
         String role = AuthUtil.getCurrentRole();
 
-        // 验证班级是否存在
         Class classEntity = classMapper.selectById(classId);
         if (classEntity == null) {
             log.warn("班级不存在: classId={}", classId);
             return Result.error("班级不存在");
         }
 
-        // 权限验证：教师需要是该班级的负责教师，学生需要是该班级的成员
         if ("teacher".equals(role)) {
             if (!userId.equals(classEntity.getTeacherId())) {
                 log.warn("教师无权限查看班级成员: userId={}, classId={}", userId, classId);
                 return Result.error("您不是该班级的负责教师，无法查看成员列表");
             }
         } else if ("student".equals(role)) {
-            // 检查学生是否在该班级中
             QueryWrapper<ClassMembers> memberWrapper = new QueryWrapper<>();
             memberWrapper.eq("class_id", classId)
-                        .eq("user_id", userId)
-                        .eq("status", true);
+                    .eq("user_id", userId)
+                    .eq("status", true);
             ClassMembers studentMember = getOne(memberWrapper);
             if (studentMember == null) {
                 log.warn("学生不在班级中: userId={}, classId={}", userId, classId);
@@ -137,38 +143,23 @@ public class ClassMembersServiceImpl extends ServiceImpl<ClassMembersMapper, Cla
         }
 
         try {
-            // 查询班级成员列表
             QueryWrapper<ClassMembers> queryWrapper = new QueryWrapper<>();
             queryWrapper.eq("class_id", classId)
-                       .eq("status", true)
-                       .orderByAsc("join_time");
-            
+                    .eq("status", true)
+                    .orderByAsc("join_time");
+
             List<ClassMembers> membersList = list(queryWrapper);
-            
             if (membersList.isEmpty()) {
                 log.info("班级暂无成员: classId={}", classId);
-                return Result.success("班级暂无成员", List.of());
+                return Result.success("班级暂无成员", Collections.emptyList());
             }
-            
-            // 转换为ClassMemberVO并关联查询学生信息
+
+            Users teacher = userMapper.selectById(classEntity.getTeacherId());
+
             List<ClassMemberVO> memberVOList = membersList.stream()
-                    .map(member -> {
-                        ClassMemberVO memberVO = new ClassMemberVO();
-                        BeanUtils.copyProperties(member, memberVO);
-                        
-                        // 查询学生基本信息
-                        Users student = userMapper.selectById(member.getUserId());
-                        if (student != null) {
-                            memberVO.setUsername(student.getUsername());
-                            memberVO.setEmail(student.getEmail());
-                            memberVO.setSchoolNumber(student.getSchoolNumber());
-                            memberVO.setAvatar(student.getAvatar());
-                        }
-                        
-                        return memberVO;
-                    })
+                    .map(member -> buildMemberVO(member, classEntity, teacher))
                     .collect(Collectors.toList());
-            
+
             log.info("获取班级成员列表成功: classId={}, memberCount={}", classId, memberVOList.size());
             return Result.success("获取班级成员列表成功", memberVOList);
         } catch (Exception e) {
@@ -182,14 +173,12 @@ public class ClassMembersServiceImpl extends ServiceImpl<ClassMembersMapper, Cla
         Long currentUserId = AuthUtil.getCurrentUserId();
         String role = AuthUtil.getCurrentRole();
 
-        // 权限验证：学生只能退出自己的班级，教师可以移除班级成员
         if ("student".equals(role)) {
             if (!currentUserId.equals(userId)) {
                 log.warn("学生无权限操作其他用户: currentUserId={}, targetUserId={}", currentUserId, userId);
                 return Result.error("您只能退出自己加入的班级");
             }
         } else if ("teacher".equals(role)) {
-            // 验证教师是否为该班级的负责教师
             Class classEntity = classMapper.selectById(classId);
             if (classEntity == null) {
                 log.warn("班级不存在: classId={}", classId);
@@ -205,33 +194,32 @@ public class ClassMembersServiceImpl extends ServiceImpl<ClassMembersMapper, Cla
         }
 
         try {
-            // 查找班级成员记录
             QueryWrapper<ClassMembers> queryWrapper = new QueryWrapper<>();
             queryWrapper.eq("class_id", classId)
-                       .eq("user_id", userId)
-                       .eq("status", true);
-            
+                    .eq("user_id", userId)
+                    .eq("status", true);
+
             ClassMembers classMember = getOne(queryWrapper);
             if (classMember == null) {
                 log.warn("用户不在班级中或已退出: userId={}, classId={}", userId, classId);
                 return Result.error("用户不在该班级中或已退出");
             }
 
-            // 软删除：将status设置为false
             classMember.setStatus(false);
-            
+
             if (updateById(classMember)) {
                 String action = "student".equals(role) ? "退出班级" : "移除班级成员";
                 log.info("{}成功: operatorId={}, userId={}, classId={}", action, currentUserId, userId, classId);
                 return Result.success(action + "成功");
-            } else {
-                String action = "student".equals(role) ? "退出班级" : "移除班级成员";
-                log.error("{}失败: operatorId={}, userId={}, classId={}", action, currentUserId, userId, classId);
-                return Result.error(action + "失败");
             }
+
+            String action = "student".equals(role) ? "退出班级" : "移除班级成员";
+            log.error("{}失败: operatorId={}, userId={}, classId={}", action, currentUserId, userId, classId);
+            return Result.error(action + "失败");
         } catch (Exception e) {
             String action = "student".equals(role) ? "退出班级" : "移除班级成员";
-            log.error("{}失败: operatorId={}, userId={}, classId={}, error={}", action, currentUserId, userId, classId, e.getMessage());
+            log.error("{}失败: operatorId={}, userId={}, classId={}, error={}",
+                    action, currentUserId, userId, classId, e.getMessage());
             return Result.error(action + "失败: " + e.getMessage());
         }
     }
@@ -241,53 +229,34 @@ public class ClassMembersServiceImpl extends ServiceImpl<ClassMembersMapper, Cla
         Long userId = AuthUtil.getCurrentUserId();
         String role = AuthUtil.getCurrentRole();
 
-        // 只有学生可以查询自己加入的班级
         if (!"student".equals(role)) {
             log.warn("用户角色无权限查询加入的班级: userId={}, role={}", userId, role);
             return Result.error("暂无权限查询加入的班级");
         }
 
         try {
-            // 查询当前用户加入的班级成员记录
             QueryWrapper<ClassMembers> queryWrapper = new QueryWrapper<>();
             queryWrapper.eq("user_id", userId)
-                       .eq("status", true)
-                       .orderByDesc("join_time");
-            
+                    .eq("status", true)
+                    .orderByDesc("join_time");
+
             List<ClassMembers> membersList = list(queryWrapper);
-            
             if (membersList.isEmpty()) {
                 log.info("用户暂未加入任何班级: userId={}", userId);
-                return Result.success("您暂未加入任何班级", List.of());
+                return Result.success("您暂未加入任何班级", Collections.emptyList());
             }
-            
-            // 转换为ClassMemberVO并关联查询班级和教师信息
+
             List<ClassMemberVO> classVOList = membersList.stream()
                     .map(member -> {
-                        ClassMemberVO memberVO = new ClassMemberVO();
-                        // 复制班级成员基本信息
-                        memberVO.setId(member.getId());
-                        memberVO.setClassId(member.getClassId());
-                        memberVO.setJoinTime(member.getJoinTime());
-                        memberVO.setStatus(member.getStatus());
-                        
-                        // 查询班级基本信息
                         Class classEntity = classMapper.selectById(member.getClassId());
+                        Users teacher = null;
                         if (classEntity != null) {
-                            // 查询教师信息并填充到VO中
-                            Users teacher = userMapper.selectById(classEntity.getTeacherId());
-                            if (teacher != null) {
-                                memberVO.setUsername(teacher.getUsername());
-                                memberVO.setEmail(teacher.getEmail());
-                                memberVO.setSchoolNumber(teacher.getSchoolNumber());
-                                memberVO.setAvatar(teacher.getAvatar());
-                            }
+                            teacher = userMapper.selectById(classEntity.getTeacherId());
                         }
-                        
-                        return memberVO;
+                        return buildMemberVO(member, classEntity, teacher);
                     })
                     .collect(Collectors.toList());
-            
+
             log.info("获取用户加入的班级列表成功: userId={}, classCount={}", userId, classVOList.size());
             return Result.success("获取加入的班级列表成功", classVOList);
         } catch (Exception e) {
@@ -296,4 +265,37 @@ public class ClassMembersServiceImpl extends ServiceImpl<ClassMembersMapper, Cla
         }
     }
 
+    private ClassMemberVO buildMemberVO(ClassMembers member, Class classEntity, Users teacher) {
+        ClassMemberVO memberVO = new ClassMemberVO();
+        memberVO.setId(member.getId());
+        memberVO.setClassId(member.getClassId());
+        memberVO.setJoinTime(member.getJoinTime());
+        memberVO.setStatus(member.getStatus());
+
+        if (classEntity != null) {
+            memberVO.setClassName(classEntity.getClassName());
+            memberVO.setDescription(classEntity.getDescription());
+            memberVO.setCourseId(classEntity.getCourseId());
+            memberVO.setJoinCode(classEntity.getJoinCode());
+            memberVO.setClassStatus(classEntity.getStatus());
+        }
+
+        if (teacher != null) {
+            memberVO.setTeacherName(teacher.getUsername());
+            memberVO.setTeacherEmail(teacher.getEmail());
+            memberVO.setTeacherAvatar(teacher.getAvatar());
+            memberVO.setUsername(teacher.getUsername());
+            memberVO.setAvatar(teacher.getAvatar());
+        }
+
+        Users student = userMapper.selectById(member.getUserId());
+        if (student != null) {
+            memberVO.setStudentName(student.getUsername());
+            memberVO.setStudentAvatar(student.getAvatar());
+            memberVO.setEmail(student.getEmail());
+            memberVO.setSchoolNumber(student.getSchoolNumber());
+        }
+
+        return memberVO;
+    }
 }
